# GxChat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  main.py  requirements.txt
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
