[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
axum = { version = "0.7.5", features = ["ws"] }
uuid = { version = "1.9.1", features = ["v4"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
dashmap = "5.5.3"
dotenv = "0.15.0"
